@@ -1,3 +1,8 @@
+2004-03-08  Per Bothner  <per@bothner.com>
+
+	* Symbol.java:  Implement Comparable, and Map.Entry, if JAVA2.
+	(compareTo):   New method.
+
 2004-01-09  Per Bothner  <per@bothner.com>
 
 	* FluidConstraint.java (find):  Inline Future.getFluids.
